Bug #20708 ndb_cache_check_time doesn't get set from my.cnf file
Submitted: 27 Jun 2006 2:02 Modified: 6 Sep 2006 12:15
Reporter: Monty Taylor
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.0.21 OS:Linux (Linux x86_64)
Assigned to: Jonas Oreland Target Version:

[27 Jun 2006 2:02] Monty Taylor
Description:
when I set ndb_cache_check_time in my.cnf it does not set the variable. If I set the
variable manually using set global ndb_cache_check_time it works just fine. 

How to repeat:
In a cluster enabled mysql, put:
ndb_cache_check_time=1000
into the my.cnf file. Restart mysql 
check the output of show global variables like 'ndb%'; and notice that
ndb_cache_check_time is still 0.
[15 Aug 2006 14:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10467

ChangeSet@1.2241, 2006-08-15 14:22:47+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#20708
    init ndb_cache_check_time and honor value in my.cnf
[1 Sep 2006 10:06] Jonas Oreland
pushed to 5.1.12
[1 Sep 2006 21:26] Jonas Oreland
pushed to 5.0.25
[6 Sep 2006 12:15] Jon Stephens
Documented bugfix in 5.0.25 and 5.1.12 changelogs.