ndb - bug#20708   init ndb_cache_check_time and honor value in my.cnf